...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vx5-Oh-nmZ">
                                                <rect key="frame" x="0.0" y="30.5" width="300" height="30"/>
                                                <accessibility key="accessibilityConfiguration" label="TextField Revenue"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" returnKeyType="next"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="trailing" secondItem="vx5-Oh-nmZ" secondAttribute="trailing" id="Z4a-j9-fXp"/>
...
                                            </mask>
                                        </variation>
                                        <variation key="widthClass=compact" alignment="top" axis="vertical"/>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wHv-Dw-hHp">
                                        <rect key="frame" x="0.0" y="90.5" width="300" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Calculate Button"/>
                                        <state key="normal" title="计算">
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="onClick:" destination="AWd-an-ztQ" eventType="touchUpInside" id="Rcc-wG-FuL"/>
                                        </connections>
...
